Change positioning of fullscreen polyfill background for summary menu to remove bug where menu was cut off.

--- a/styles/style.css
+++ b/styles/style.css
@@ -2060,7 +2060,7 @@ file. These definitions will be defined mobile first.
 
 .summary-menu--fs-polyfill::before {
     content: "";
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
